--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,25 +5,17 @@ name = "oraqle" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "oraqle.kidzvpn.filegear-sg.me"
+pattern = "oraqle.envy-cloud.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.oraqle.kidzvpn.filegear-sg.me"
+pattern = "ava.game.naver.com.oraqle.envy-cloud.me"
+envy-cloud.me
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.oraqle.kidzvpn.filegear-sg.me"
+pattern = "support.duolingo.com.oraqle.envy-cloud.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.oraqle.kidzvpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "cvs-deo.shopeemobile.com.oraqle.kidzvpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "support.duolingo.com.oraqle.kidzvpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "error.growmotion.com.oraqle.kidzvpn.filegear-sg.me"
+pattern = "error.growmotion.com.oraqle.envy-cloud.me"
 custom_domain = true
 
 [vars]
