--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,6 +6,7 @@ main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
 pattern = "indon.tehekvpn.filegear-sg.me"
+custom_domain = true
 [[routers]]
 pattern = "shopee.co.id.indon.tehekvpn.filegear-sg.me"
 custom_domain = true
