--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,28 +5,28 @@ name = "id1" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "id1.noyszvpn.filegear-sg.me"
+pattern = "id1.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cache.netflix.com.id1.noyszvpn.filegear-sg.me"
+pattern = "cache.netflix.com.id1.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api.instagram.com.id1.noyszvpn.filegear-sg.me"
+pattern = "api.instagram.com.id1.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "m.pubgmobile.com.id1.noyszvpn.filegear-sg.me"
+pattern = "m.pubgmobile.com.id1.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.id1.noyszvpn.filegear-sg.me"
+pattern = "help.viu.com.id1.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cdn.appsfyler.com.id1.noyszvpn.filegear-sg.me"
+pattern = "cdn.appsfyler.com.id1.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "static-web.prod.vidiocdn.com.id1.noyszvpn.filegear-sg.me"
+pattern = "static-web.prod.vidiocdn.com.id1.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.id1.noyszvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.id1.fourfect.filegear-sg.me"
 custom_domain = true
 
 [vars]
