--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,49 +1,33 @@
-name = "HKG" # todo
+name = "jpvultr" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "hkg.reinzvpn.filegear-sg.me"
+pattern = "jpvultr.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "teams.microsoft.com.hkg.reinzvpn.filegear-sg.me"
+pattern = "teams.microsoft.com.jpvultr.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "meetings.googleapis.com.hkg.reinzvpn.filegear-sg.me"
+pattern = "meetings.googleapis.com.jpvultr.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "zoomcares.zoom.us.hkg.reinzvpn.filegear-sg.me"
+pattern = "edu.ruangguru.com.jpvultr.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "maps.gstatic.com.hkg.reinzvpn.filegear-sg.me"
+pattern = "beta.zoom.us.jpvultr.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "edge.skype.com.hkg.reinzvpn.filegear-sg.me"
+pattern = "api.zoom.us.jpvultr.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "meet.google.com.hkg.reinzvpn.filegear-sg.me"
+pattern = "store.zoom.us.jpvultr.reinzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "teams.live.com.hkg.reinzvpn.filegear-sg.me"
+pattern = "support.zoom.us.jpvultr.reinzvpn.filegear-sg.me"
 custom_domain = true
-[[routes]]
-pattern = "kh.google.com.hkg.reinzvpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "learn.microsoft.com.hkg.reinzvpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "classroom.google.com.hkg.reinzvpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "mapsplatform.google.com.hkg.reinzvpn.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "maps.googleapis.com.hkg.reinzvpn.filegear-sg.me"
-custom_domain = true
-
 
 
 [vars]
