--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sgdo" # todo
+name = "vless" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgdo.tehekvpn.filegear-sg.me"
+pattern = "vlesstehekvpn.filegear-sg.me"
 custom_domain = true
 [[routers]]
-pattern = "shopee.co.id.sgdo.tehekvpn.filegear-sg.me"
+pattern = "support.duolingo.com.vless.tehekvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.sgdo.tehekvpn.filegear-sg.me"
+pattern = "support.duolingo.com.vless.tehekvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.sgdo.tehekvpn.filegear-sg.me"
+pattern = "support.duolingo.com.vless.tehekvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.sgdo.tehekvpn.filegear-sg.me"
+pattern = "support.duolingo.com.vless.tehekvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
