--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "Microsoft-Azure" # todo
+name = "microsoft" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "microsoft.envy-cloud.me"
+pattern = "mcrft.envy-cloud.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.microsoft.envy-cloud.me"
+pattern = "ava.game.naver.com.mcrft.envy-cloud.me"
 custom_domain = true
 [[routes]]
-pattern = "support.duolingo.com.microsoft.envy-cloud.me"
+pattern = "support.duolingo.com.mcrft.envy-cloud.me"
 custom_domain = true
 [[routes]]
-pattern = "error.growmotion.com.microsoft.envy-cloud.me"
+pattern = "error.growmotion.com.mcrft.envy-cloud.me"
 custom_domain = true
 [[routes]]
-pattern = "paylater-docs.akulaku.com.microsoft.envy-cloud.me"
+pattern = "paylater-docs.akulaku.com.mcrft.envy-cloud.me"
 custom_domain = true
 
 [vars]
