--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,16 +8,16 @@ compatibility_date = "2023-05-26"
 pattern = "id1.ayubisanz.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.id1.ayubisanz.filegear-sg.me"
+pattern = "ava.game.naver.com.id1.ayubisanz.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.id1.ayubisanz.filegear-sg.me"
+pattern = "care.pmang.game.naver.com.id1.ayubisanz.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.id1.ayubisanz.filegear-sg.me"
+pattern = "df.game.naver.com.id1.ayubisanz.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.id1.ayubisanz.filegear-sg.me"
+pattern = "go.line-works.com.id1.ayubisanz.filegear-sg.me"
 custom_domain = true
 
 [vars]
