--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "azure" # todo
+name = "indo2" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "azure.envy-cloud.me"
+pattern = "fly.envy-cloud.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.azure.envy-cloud.me"
+pattern = "ava.game.naver.com.fly.envy-cloud.me"
 custom_domain = true
 [[routes]]
-pattern = "support.duolingo.com.azure.envy-cloud.me"
+pattern = "support.duolingo.com.fly.envy-cloud.me"
 custom_domain = true
 [[routes]]
-pattern = "error.growmotion.com.azure.envy-cloud.me"
+pattern = "error.growmotion.com.fly.envy-cloud.me"
 custom_domain = true
 [[routes]]
-pattern = "paylater-docs.akulaku.com.azure.envy-cloud.me"
+pattern = "paylater-docs.akulaku.com.fly.envy-cloud.me"
 custom_domain = true
 
 [vars]
