--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sg-alibaba" # todo
+name = "sg-amazon" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "alibaba.ayubisanz.filegear-sg.me"
+pattern = "amazon.ayubisanz.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.alibaba.ayubisanz.filegear-sg.me"
+pattern = "df.game.naver.com.amazon.ayubisanz.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "care.pmang.game.naver.com.alibaba.ayubisanz.filegear-sg.me"
+pattern = "care.pmang.game.naver.com.amazon.ayubisanz.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "slugger.hangame.com.alibaba.ayubisanz.filegear-sg.me"
+pattern = "slugger.hangame.com.amazon.ayubisanz.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.alibaba.ayubisanz.filegear-sg.me"
+pattern = "ava.game.naver.com.amazon.ayubisanz.filegear-sg.me"
 custom_domain = true
 
 [vars]
