--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,35 +1,38 @@
-name = "sg1" # todo
+name = "fs" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg1.fourfect.filegear-sg.me"
+pattern = "fs.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cache.netflix.com.sg1.fourfect.filegear-sg.me"
+pattern = "cache.netflix.com.fs.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api.instagram.com.sg1.fourfect.filegear-sg.me"
+pattern = "api.instagram.com.fs.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "m.pubgmobile.com.sg1.fourfect.filegear-sg.me"
+pattern = "m.pubgmobile.com.fs.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.sg1.fourfect.filegear-sg.me"
+pattern = "help.viu.com.fs.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cdn.appsfyler.com.sg1.fourfect.filegear-sg.me"
+pattern = "cdn.appsfyler.com.fs.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "static-web.prod.vidiocdn.com.sg1.fourfect.filegear-sg.me"
+pattern = "static-web.prod.vidiocdn.com.fs.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.sg1.fourfect.filegear-sg.me"
+pattern = "cf.shopee.co.id.fs.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "investors.spotify.com.sg1.fourfect.filegear-sg.me"
+pattern = "investors.spotify.com.fs.fourfect.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "ava.game.naver.com.fs.fourfect.filegear-sg.me"
 custom_domain = true
 
 [vars]
