--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,38 +1,38 @@
-name = "bv" # todo
+name = "do" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "bv.fourfect.filegear-sg.me"
+pattern = "do.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cache.netflix.com.bv.fourfect.filegear-sg.me"
+pattern = "cache.netflix.com.do.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api.instagram.com.bv.fourfect.filegear-sg.me"
+pattern = "api.instagram.com.do.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "m.pubgmobile.com.bv.fourfect.filegear-sg.me"
+pattern = "m.pubgmobile.com.do.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.bv.fourfect.filegear-sg.me"
+pattern = "help.viu.com.do.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cdn.appsfyler.com.bv.fourfect.filegear-sg.me"
+pattern = "cdn.appsfyler.com.do.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "static-web.prod.vidiocdn.com.bv.fourfect.filegear-sg.me"
+pattern = "static-web.prod.vidiocdn.com.do.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.bv.fourfect.filegear-sg.me"
+pattern = "cf.shopee.co.id.do.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "investors.spotify.com.bv.fourfect.filegear-sg.me"
+pattern = "investors.spotify.com.do.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.bv.fourfect.filegear-sg.me"
+pattern = "ava.game.naver.com.do.fourfect.filegear-sg.me"
 custom_domain = true
 
 [vars]
