--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,6 +5,9 @@ name = "xcl" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
+pattern = "xcl.wonghd.my.id"
+custom_domain = true
+[[routes]]
 pattern = "wong.whatsapp.com.xcl.wonghd.my.id"
 custom_domain = true
 
