--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,7 +8,7 @@ compatibility_date = "2023-05-26"
 pattern = "xcl.wonghd.my.id"
 custom_domain = true
 [[routes]]
-pattern = "wong.whatsapp.com.xcl.wonghd.my.id"
+pattern = "v.whatsapp.net.xcl.wonghd.my.id"
 custom_domain = true
 
 [vars]
