--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,32 +1,32 @@
-name = "sgamazon-abscell" # todo
+name = "sg-amazon-abscell" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgamazon.abscell.my.id"
+pattern = "sg1.abscell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cms.ruangguru.com.sgamazon.abscell.my.id"
+pattern = "cms.ruangguru.com.sg1.abscell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "gw.ruangguru.com.sgamazon.abscell.my.id"
+pattern = "gw.ruangguru.com.sg1.abscell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.sgamazon.abscell.my.id"
+pattern = "ava.game.naver.com.sg1.abscell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.sgamazon.abscell.my.id"
+pattern = "df.game.naver.com.sg1.abscell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "account.pmang.game.naver.com.sgamazon.abscell.my.id"
+pattern = "account.pmang.game.naver.com.sg1.abscell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "care.pmang.game.naver.com.sgamazon.abscell.my.id"
+pattern = "care.pmang.game.naver.com.sg1.abscell.my.id"
 custom_domain = true
 [[routes]]
-pattern = "app-stg.gopay.co.id.sgamazon.abscell.my.id"
+pattern = "app-stg.gopay.co.id.sg1.abscell.my.id"
 custom_domain = true
 
 [vars]
