--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sg1" # todo
+name = "vidio" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "albi.lbjstore.my.id"
+pattern = "vidio.lbjstore.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.vidio.com.albi.lbjstore.my.id"
+pattern = "quiz.vidio.com.vidio.lbjstore.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.albi.lbjstore.my.id"
+pattern = "quiz.int.vidio.com.vidio.lbjstore.my.id"
 custom_domain = true
 [[routes]]
-pattern = "img.email3.vidio.com.albi.lbjstore.my.id"
+pattern = "img.email3.vidio.com.vidio.lbjstore.my.id"
 custom_domain = true
 [[routes]]
-pattern = "nontontv.vidio.com.albi.lbjstore.my.id"
+pattern = "nontontv.vidio.com.vidio.lbjstore.my.id"
 custom_domain = true
 
 [vars]
