--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "gatot" # todo
+name = "ali" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "gatot.wonghd.my.id"
+pattern = "ali.wonghd.my.id"
 custom_domain = true
 [[routes]]
-pattern = "web.web.whatsapp.com.gatot.wonghd.my.id"
+pattern = "web.web.whatsapp.com.ali.wonghd.my.id"
 custom_domain = true
 [[routes]]
-pattern = "v.whatsapp.net.gatot.wonghd.my.id"
+pattern = "v.wong.whatsapp.net.ali.wonghd.my.id"
 custom_domain = true
 [[routes]]
-pattern = "driver.gojek.link.gatot.wonghd.my.id"
+pattern = "www.driver.gojek.link.ali.wonghd.my.id"
 custom_domain = true
 [[routes]]
-pattern = "paylater-docs.akulaku.com.gatot.wonghd.my.id"
+pattern = "www.paylater-docs.akulaku.com.ali.wonghd.my.id"
 custom_domain = true
 
 [vars]
