--- a/wrangler.toml
+++ b/wrangler.toml
@@ -20,9 +20,6 @@ custom_domain = true
 pattern = "help.viu.com.aws.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cdn.appsflyer.com.aws.fourfect.filegear-sg.me"
-custom_domain = true
-[[routes]]
 pattern = "static-web.prod.vidiocdn.com.aws.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
@@ -39,6 +36,9 @@ pattern = "app.genflix.co.id.aws.fourfect.filegear-sg.me"
 custom_domain = true
 [[routes]]
 pattern = "asphalt.go-jek.com.aws.fourfect.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "teams.live.com.aws.fourfect.filegear-sg.me"
 custom_domain = true
 
 [vars]
