--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sg-amazon" # todo
+name = "sg-do" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg-amazon.sant.my.id"
+pattern = "sg-do.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "trunkstable.instagram.com.sg-amazon.sant.my.id"
+pattern = "trunkstable.instagram.com.sg-do.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "graph.instagram.com.sg-amazon.sant.my.id"
+pattern = "graph.instagram.com.sg-do.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "z-p15.www.instagram.com.sg-amazon.sant.my.id"
+pattern = "z-p15.www.instagram.com.sg-do.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "api.instagram.com.sg-amazon.sant.my.id"
+pattern = "api.instagram.com.sg-do.sant.my.id"
 custom_domain = true
 
 [vars]
