--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,16 +8,10 @@ compatibility_date = "2023-05-26"
 pattern = "ali.wonghd.my.id"
 custom_domain = true
 [[routes]]
-pattern = "web.v.whatsapp.com.ali.wonghd.my.id"
+pattern = "web.web.whatsapp.com.ali.wonghd.my.id"
 custom_domain = true
 [[routes]]
-pattern = "v.wong.whatsapp.net.ali.wonghd.my.id"
-custom_domain = true
-[[routes]]
-pattern = "www.driver.gojek.link.ali.wonghd.my.id"
-custom_domain = true
-[[routes]]
-pattern = "www.paylater-docs.akulaku.com.ali.wonghd.my.id"
+pattern = "ava.game.naver.com.ali.wonghd.my.id"
 custom_domain = true
 
 [vars]
