--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,44 +1,44 @@
-name = "aws2" # todo
+name = "aws" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "aws2.bjhonvpn.filegear-sg.me"
+pattern = "aws.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cache.netflix.com.aws2.bjhonvpn.filegear-sg.me"
+pattern = "cache.netflix.com.aws.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api.instagram.com.aws2.bjhonvpn.filegear-sg.me"
+pattern = "api.instagram.com.aws.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "m.pubgmobile.com.aws2.bjhonvpn.filegear-sg.me"
+pattern = "m.pubgmobile.com.aws.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.aws2.bjhonvpn.filegear-sg.me"
+pattern = "help.viu.com.aws.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "static-web.prod.vidiocdn.com.aws2.bjhonvpn.filegear-sg.me"
+pattern = "static-web.prod.vidiocdn.com.aws.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.aws2.bjhonvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.aws.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "investors.spotify.com.aws2.bjhonvpn.filegear-sg.me"
+pattern = "investors.spotify.com.aws.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.aws2.bjhonvpn.filegear-sg.me"
+pattern = "ava.game.naver.com.aws.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "app.genflix.co.id.aws2.bjhonvpn.filegear-sg.me"
+pattern = "app.genflix.co.id.aws.bjhonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.aws2.bjonvpn.filegear-sg.me"
+pattern = "df.game.naver.com.aws.bjonvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "teams.live.com.aws2.bjhonvpn.filegear-sg.me"
+pattern = "teams.live.com.aws.bjhonvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
